<resources>
    <string name="app_name">World Trend</string>
    <string name="trend">Trend News</string>
    <string name="title_breaking_news">Breaking News</string>
    <string name="title_search_news">Search News</string>
    <string name="title_climate_news">Climate Change</string>
    <string name="search_channel_category">Search News channels</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="breaking">Breaking</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="could_not_refresh">Could not refresh: %s</string>
    <string name="could_not_load_search_results">Could not load search results: %s</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="no_results_found">No results found</string>
    <string name="search_instructions">Tap the magnifying glass to start searching</string>
    <string name="delete_all_bookmarks">Delete all bookmarks</string>
    <string name="bookmark_title">Bookmark</string>
    <string name="bookmark_news">Bookmarked News</string>
    <string name="home_title">Breaking News</string>
    <string name="braking_news">World</string>
    <string name="settings_title">Settings</string>
    <string name="more_icon">More Icon</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_icon">Privacy Policy Icon</string>
    <string name="share_icon">Share Icon</string>
    <string name="share">Share</string>
    <string name="ads_free_experience_2_46">Ads Free Experience</string>
    <string name="settings_features">Features</string>
    <string name="general_features">General Settings</string>
    <string name="enable_javascript">Enable JavaScript</string>
    <string name="full_screen_mode">Full Screen</string>
    <string name="enable_zoom_in">Enable Zoom In and Out</string>
    <string name="night_mode">Night Mode</string>
    <string name="settings_frag_title">Settings</string>
    <string name="app_version">Version: 0.12.0</string>
    <string name="clear_ache">Clear Cache</string>
    <string name="news_from_server">Get News from server</string>
    <string name="privacy_title">Privacy and More</string>
    <string name="delete_bookmark">Delete Bookmarks</string>
    <string name="get_more">More Of Super Nova Pro Co.</string>
    <string name="defult_time">. 20/05/2025</string>
    <string name="news_channel">Category</string>
    <string name="breaking_news_title">Breaking News</string>
    <string name="climate_chang_news">Climate Chang News</string>
    <string name="world_news_category">. World news</string>
    <string name="usa_news_category">. USA news</string>
    <string name="sport_news_category">. Sport news</string>
    <string name="finance_news">. Finance news</string>
    <string name="more_climate_news">More News…</string>
    <string name="mic_input">"search by mic "</string>
    <string name="politics_news_category">. Politics news</string>
    <string name="loading_website_msg">loading.....</string>
    <string name="more_app">More App</string>
    <string name="load_catch">Load From Catch</string>
    <string name="allow_cookies">Block Cookies</string>

    <string name="long_text">Tap the magnifying glass to start searching lorem
        Tap the magnifying glass to start searching
        Tap the magnifying glass to start searching
        Tap the magnifying glass to start searching
        Tap the magnifying glass to start searching
    </string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">FeedBack and Suggestions</string>
    <string name="block_popups">Block PopUps</string>
    <string name="delete_by_sweep">You Can Delete News Card By sweep left or right</string>
</resources>