<?xml version="1.0" encoding="utf-8"?>
   <androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Outlined"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardCornerRadius="5dp"
    >

    <ImageView
        android:id="@+id/bookmark_news_image"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:background="@drawable/round_bg_normal"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:src="@drawable/ic_news"
        android:contentDescription="@string/more_icon"
         />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bookmark_short_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="80dp"
            android:ellipsize="end"
            android:maxEms="16"
            android:maxLines="1"
            android:text="@string/long_text"
            android:textSize="13sp" />
        <ImageView
            android:id="@+id/bookmark_sign"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_bookmarked"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/bookmark_short_title"
            android:contentDescription="@string/bookmarks"
            app:tint="@color/ic_color" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bookmark_long_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookmark_short_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="3dp"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:text="@string/search_instructions"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/bookmark_remove"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/more_icon"
            android:src="@drawable/ic_delete_sweep" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bookmark_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/defult_time"
            style="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp" />

    </RelativeLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dividerColor="@color/card_bg"
        android:layout_gravity="bottom"
        />

</androidx.cardview.widget.CardView>