<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.trendNews.NewsFragment">
    <!-- Splash Screen -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_act_app_bar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:background="@drawable/top_bar_background"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_act_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:logo="@mipmap/ic_launcher"
            app:logoDescription="@string/app_name"
            />



    </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/art_fragment_viewpager2_holder"
            android:layout_width="match_parent"
            android:background="@drawable/round_bg_normal"
            android:layout_below="@id/main_act_app_bar"
            android:backgroundTint="#2D3943"
            android:layout_height="115dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/art_pager2_content_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_bg_normal"
                    android:backgroundTint="#3F5668"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/title_climate_news"
                    android:textColor="#BCBCBC"
                    app:drawableEndCompat="@drawable/ic_arrow_right"
                    app:drawableStartCompat="@drawable/ic_arrow_left" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/art_fragment_pager2_content"
                    android:layout_width="105dp"
                    android:layout_height="75dp"
                    android:background="@drawable/round_bg"
                    tools:listitem="@layout/item_trendnews_article" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="1dp">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/worldNewsTextView_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/world_news_category"
                    android:textColor="#FFFFFF" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cultureNewsTextView_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/usa_news_category"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sportNewsTextView_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/sport_news_category"
                    android:textColor="#ffff"
                    android:textSize="13sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/financeNewsTextView_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/finance_news"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/politicsNewsTextView_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/politics_news_category"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />


            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/art_frag_extra_section"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/art_fragment_viewpager2_holder"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
           >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                >

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Widget.Material3.CheckedTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/climate_chang_news"
                     />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/art_frag_to_climate_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/more_climate_news"
                    android:layout_marginEnd="5dp"
                    android:linksClickable="true"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/art_fra_climate_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:padding="4dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/round_bg"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_climate_article" />

        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/art_frag_breaking_news_text"
            style="@style/Widget.Material3.CheckedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/art_frag_extra_section"
            android:paddingStart="20dp"
            android:text="@string/breaking_news_title"
             />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/art_fragment_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/art_frag_breaking_news_text"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/half_round_bg"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_trendnews_article" />
</RelativeLayout>